name:     progress-meter
version:  1.0.0.1
category: System
synopsis: Live diagnostics for concurrent activity

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2017 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/progress-meter
bug-reports:  https://github.com/esoeylemez/progress-meter/issues
license:      BSD3
license-file: LICENSE

description:  This library can be used to display a progress bar or
    other live diagnostics for your application.  It supports partial
    updates from multiple threads without interfering with each other,
    and it has the correct behaviour when printing diagnostics that are
    not part of the progress bar and should just scroll by.
    .
    The @System.Progress@ module contains a tutorial.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/progress-meter.git

flag Devel
    default: False
    description: Development dependencies
    manual: True


library
    build-depends:
        ansi-terminal
      , async
      , base
      , stm
    if flag(devel)
        build-depends: rapid, rapid-term
    default-language: Haskell2010
    ghc-options: -W
    hs-source-dirs: src
    exposed-modules:
        System.Progress
